--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_Get.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_Get.json
@@ -23,6 +23,7 @@
               "external": true,
               "targetPort": 3000,
               "transport": "auto"
+              //add custom domain binding here
             }
           },
           "template": {
