one more missing example

--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_Get.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_Get.json
@@ -22,8 +22,19 @@
               "fqdn": "testcontainerApp0.demokube-t24clv0g.eastus.containerApps.k4apps.io",
               "external": true,
               "targetPort": 3000,
-              "transport": "auto"
-              //add custom domain binding here
+              "transport": "auto",
+              "customDomains": [
+                {
+                  "name": "www.my-name.com",
+                  "bindingType": "SniEnabled",
+                  "certificateName": "my-certificate-for-my-name-dot-com"
+                },
+                {
+                  "name": "www.my--other-name.com",
+                  "bindingType": "SniEnabled",
+                  "certificateName": "my-certificate-for-my-other-name-dot-com"
+                }
+              ]
             }
           },
           "template": {
