Remove dapr components from the ContainerApp object

--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_Patch.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_Patch.json
@@ -62,7 +62,8 @@
             },
             "dapr": {
               "enabled": true,
-              "appPort": 3000
+              "appPort": 3000,
+              "appProtocol": "grpc"
             }
           }
         }
