--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_CreateOrUpdate.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_CreateOrUpdate.json
@@ -38,7 +38,8 @@
           },
           "dapr": {
             "enabled": true,
-            "appPort": 3000
+            "appPort": 3000,
+            "appProtocol": "grpc"
           }
         }
       }
@@ -91,7 +92,8 @@
             },
             "dapr": {
               "enabled": true,
-              "appPort": 3000
+              "appPort": 3000,
+              "appProtocol": "grpc"
             }
           }
         }
@@ -143,7 +145,8 @@
             },
             "dapr": {
               "enabled": true,
-              "appPort": 3000
+              "appPort": 3000,
+              "appProtocol": "grpc"
             }
           }
         }
