--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2022-01-01-preview/ApplicationGroups.json
@@ -260,7 +260,7 @@
             },
             "isEnabled": {
               "type": "boolean",
-              "description": "Determines if Application Group is allowed to create connection with namespace or not. Once disabled, connections if any for that application group will be immediately broken"
+              "description": "Determines if Application Group is allowed to create connection with namespace or not. Once the isEnabled is set to false, all the existing connections of application group gets dropped and no new connections will be allowed"
             },
             "appGroupIdentifier": {
               "type": "string",
