--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_ListBySubscription.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_ListBySubscription.json
@@ -53,7 +53,7 @@
                 "dapr": {
                   "enabled": true,
                   "appPort": 3000,
-                  "appProtocol": "grpc"
+                  "appProtocol": "http"
                 }
               }
             }
