--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_CreateOrUpdate.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_CreateOrUpdate.json
@@ -93,7 +93,7 @@
             "dapr": {
               "enabled": true,
               "appPort": 3000,
-              "appProtocol": "grpc"
+              "appProtocol": "http"
             }
           }
         }
@@ -146,7 +146,7 @@
             "dapr": {
               "enabled": true,
               "appPort": 3000,
-              "appProtocol": "grpc"
+              "appProtocol": "http"
             }
           }
         }
