--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_CreateOrUpdate.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/examples/ContainerApps_CreateOrUpdate.json
@@ -39,7 +39,7 @@
           "dapr": {
             "enabled": true,
             "appPort": 3000,
-            "appProtocol": "grpc"
+            "appProtocol": "http"
           }
         }
       }
