Use common type ProxyResource

--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/EasyAuthConfigs.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/EasyAuthConfigs.json
@@ -237,7 +237,7 @@
       "type": "object",
       "allOf": [
         {
-          "$ref": "./CommonDefinitions.json#/definitions/ProxyOnlyResource"
+          "$ref": "../../../../../common-types/resource-management/v3/types.json#/definitions/ProxyResource"
         }
       ],
       "properties": {
