add outbound ip

--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerApps.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/ContainerApps.json
@@ -407,6 +407,14 @@
             "template": {
               "$ref": "./CommonDefinitions.json#/definitions/Template",
               "description": "Container App versioned application definition."
+            },
+            "outboundIPAddresses": {
+              "description": "Outbound IP Addresses for container app.",
+              "type": "array",
+              "items": {
+                "type": "string"
+              },
+              "readOnly": true
             }
           },
           "x-ms-client-flatten": true
