--- a/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/EasyAuthConfigs.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2022-01-01-preview/EasyAuthConfigs.json
@@ -446,7 +446,7 @@
             "type": "string"
           }
         },
-        "disableWWWAuthenticate": {
+        "disableWwwAuthenticate": {
           "description": "<code>true</code> if the www-authenticate provider should be omitted from the request; otherwise, <code>false</code>.",
           "type": "boolean"
         }
